--- a/chromeextension/index.html
+++ b/chromeextension/index.html
@@ -5,7 +5,7 @@
         <script type="text/javascript" src="./index.js"></script>
         <link rel="stylesheet" type="text/css" href="./style.css">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet".
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     </head>
     <body>
         <div class='container'>
@@ -16,7 +16,7 @@
                 <div class='description'>
                     <div class='price'></div>
                     <div class='name'></div>
-                    <div class='buy-btn'><a class='btn btn-default'></a></div>
+                    <div class='buy-btn'><a id="buy" class='btn btn-default'></a></div>
                 </div>
             </div>
         </div>
